# shellit-dots

./: CLAUDE.md  CMakeLists.txt  DMSShellIPC.qml  README.md  Update-script.txt  dms.spec  install.sh  shell.qml  shellit.spec  update-shellit.sh
Common/: AppUsageHistoryData.qml  Appearance.qml  CacheData.qml  Paths.qml  Ref.qml  SessionData.qml  SettingsData.qml  ShellitAppearance.qml  StockThemes.js  Theme.qml
Modals/: BluetoothPairingModal.qml  DankColorPickerModal.qml  NetworkInfoModal.qml  NetworkWiredInfoModal.qml  NotificationModal.qml  PowerMenuModal.qml  ProcessListModal.qml  ShellitColorPickerModal.qml  WifiPasswordModal.qml
Modals/Clipboard/: ClipboardContent.qml  ClipboardEntry.qml  ClipboardHeader.qml  ClipboardHistoryModal.qml  ClipboardKeyboardHints.qml
Modals/Common/: DankModal.qml
Modals/FileBrowser/: FileBrowserModal.qml  FileInfo.qml  KeyboardHints.qml
Modals/Settings/: PowerSettings.qml  SettingsContent.qml  SettingsModal.qml  SettingsSidebar.qml
Modals/Spotlight/: SpotlightContextMenu.qml  SpotlightModal.qml
Modules/: BlurredWallpaperBackground.qml  SystemUpdatePopout.qml  Toast.qml  WallpaperBackground.qml  WallpaperEngineProc.qml
Modules/AppDrawer/: AppDrawerPopout.qml  AppLauncher.qml  CategorySelector.qml
Modules/ControlCenter/: PowerMenu.qml
Modules/Dock/: Dock.qml  DockContextMenu.qml
Modules/HyprWorkspaces/: HyprlandOverview.qml
Modules/Lock/: CustomButtonKeyboard.qml  Keyboard.qml  Lock.qml  LockPowerMenu.qml  LockScreenContent.qml
Modules/Notepad/: Notepad.qml  NotepadSettings.qml  NotepadTextEditor.qml
Modules/OSD/: BrightnessOSD.qml  IdleInhibitorOSD.qml  MicMuteOSD.qml
Modules/Plugins/: BasePill.qml  ListSetting.qml  ListSettingWithInput.qml  PluginComponent.qml  PluginControlCenterWrapper.qml  PluginPopout.qml  SliderSetting.qml  ToggleSetting.qml
Modules/ProcessList/: PerformanceTab.qml  ProcessContextMenu.qml  ProcessListItem.qml  ProcessListPopout.qml  ProcessListView.qml  ProcessesTab.qml  SystemOverview.qml  SystemTab.qml
Modules/Settings/: AboutTab.qml  DisplaysTab.qml  DockTab.qml  LauncherTab.qml  PersonalizationTab.qml  PluginsTab.qml  SettingsSection.qml  ShellitBarTab.qml  ThemeColorsTab.qml  TimeWeatherTab.qml  WidgetSelectionPopup.qml  WidgetTweaksTab.qml  WidgetsTabSection.qml
Modules/ShellitBar/: AutoHideManager.qml  BarCanvas.qml  ShellitBar.qml
Modules/ShellitDash/: 1TodoTab.qml  2TodoTab.qml  3TodoTab.qml  DankDashPopout.qml  MediaPlayerTab.qml  ShellitDashPopout.qml  TaskList.qml  TodoTab.qml  WeatherTab.qml
PLUGINS/: POPOUT_SERVICE.md  README.md  plugin-schema.json
PLUGINS/ControlCenterDetailExample/: plugin.json
PLUGINS/ControlCenterExample/: plugin.json
PLUGINS/ExampleEmojiPlugin/: EmojiSettings.qml  EmojiWidget.qml  README.md  plugin.json
PLUGINS/ExampleWithVariants/: README.md  VariantWidget.qml  plugin.json
PLUGINS/LauncherExample/: README.md  plugin.json
PLUGINS/PopoutControlExample/: PopoutControlSettings.qml  PopoutControlWidget.qml  README.md  plugin.json
PLUGINS/WallpaperWatcherDaemon/: README.md  WallpaperWatcherSettings.qml  plugin.json
Services/: AppSearchService.qml  AudioService.qml  BatteryService.qml  BluetoothService.qml  DMSNetworkService.qml  DMSService.qml  DgopService.qml  DisplayService.qml  NetworkService.qml  NiriService.qml  NotepadStorageService.qml  PluginService.qml  PopoutService.qml  PortalService.qml  SessionService.qml  ShellitNetworkService.qml  ShellitService.qml  SystemUpdateService.qml  Todo.qml  TodoService.qml  VpnService.qml  WallpaperCyclingService.qml  WeatherService.qml  niri-binds.kdl
Shaders/frag/: wp_disc.frag  wp_fade.frag  wp_pixelate.frag  wp_portal.frag  wp_stripes.frag
Shaders/qsb/: wp_fade.frag.qsb  wp_wipe.frag.qsb
Widgets/: CachingImage.qml  DialogButton.qml  FloatingActionButton.qml  MaterialSymbol copy.qml  MaterialSymbol.qml  Revealer.qml  RippleButton.qml  SecondaryTabButton.qml  ShelliToggle.qml  ShellitBackdrop.qml  ShellitCircularImage.qml  ShellitDropdown.qml  ShellitFlickable.qml  ShellitGridView.qml  ShellitIcon.qml  ShellitIconPicker.qml  ShellitListView.qml  ShellitLocationSearch.qml  ShellitOSD.qml  ShellitPopout.qml  ShellitScrollbar.qml  ShellitSeekbar.qml  ShellitTabBar.qml  ShellitTooltip.qml  StateLayer.qml  StyledFlickable.qml  StyledRect.qml  StyledTextMetrics.qml  StyledToolTip.qml  StyledToolTipContent.qml  SystemLogo.qml
assets/: Icon.txt  icon.txt
assets/pam/: fprint
assets/systemd/: dms.service  shellit.service
components/: Placeholder.qml
danky/: CLAUDE.md  CMakeLists.txt  qmlformat-all.sh  shellit-gitpull.sh  spam-notifications.sh  verify-notifications.sh
danky/Common/: Anims.qml  AppUsageHistoryData.qml  CacheData.qml  CacheUtils.qml  Facts.qml  ModalManager.qml  Proc.qml  SettingsData.qml  fzf.js  markdown2html.js
danky/Modals/: HyprKeybindsModal.qml  NetworkInfoModal.qml  WifiPasswordModal.qml
danky/Modules/: WallpaperEngineProc.qml
danky/PLUGINS/: POPOUT_SERVICE.md  THEME_REFERENCE.md  plugin-schema.json
danky/Services/: CalendarService.qml  CompositorService.qml  DisplayService.qml  HyprKeybindsService.qml  IdleService.qml  LegacyNetworkService.qml  MprisController.qml  NotificationService.qml  PluginService.qml  PopoutService.qml  PortalService.qml  PrivacyService.qml  ShellitNetworkService.qml  SystemUpdateService.qml  ToastService.qml  UserInfoService.qml
danky/Widgets/: M3WaveProgress.qml  PluginGlobalVar.qml  ShellitActionButton.qml  ShellitAlbumArt.qml  ShellitButton.qml  ShellitButtonGroup.qml  ShellitDropdown.qml  ShellitPopout.qml  ShellitSlideout.qml  ShellitSlider.qml  ShellitTextField.qml  (+1 more)
docs/: CUSTOM_THEMES.md  IPC.md  theme_hotline_miami.json  theme_miami_vice.json
extras/: CMakeLists.txt
ii/: shell.qml
matugen/: dank16.py
modules/: BlurredWallpaperBackground.qml  SystemUpdatePopout.qml  Toast.qml  WallpaperBackground.qml  WallpaperEngineProc.qml
plugin/: CMakeLists.txt
quickshell-ii/: shell.qml
quickshell-ss/: GlobalStates.qml  settings.qml  shell.qml  welcome.qml
scripts/: gtk.sh  matugen-worker.sh
sdata/: deps-info.md
(+445 files in other folders)
